--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 				<img src='img/iali29.jpg'/>
 			</div>
 			<div id="/section-2/page-3" class="ft-page page-7" data-id="page-3">
-				<h3 id="text-6" >Anh vẫn lạc quan, mĩm cười,chờ đợi.</h3>
+				<h3 id="text-6" >Anh vẫn lạc quan, mỉm cười,chờ đợi.</h3>
 				<img src='img/iali60.jpg' />
 			</div>
 			<div id="/section-2/page-4" class="ft-page page-8 full-img" data-id="page-4">
@@ -77,7 +77,7 @@
 				<img src='img/iali5.jpg' />
 			</div>
 			<div id="/section-2/page-6" class="ft-page page-10" data-id="page-6">
-				<h3 id="text-9" >Mĩm cười với mặt trời, tự tin với bản thân!</h3>
+				<h3 id="text-9" >Mỉm cười với mặt trời, tự tin với bản thân!</h3>
 				<img src='img/iali22.jpg' />
 			</div>
 		</div>
@@ -144,7 +144,7 @@
 		</div>
 		<div class="ft-section section-5" data-id="section-5">
 			<div id="/section-5/page-1" class="ft-page page-25 left-img" data-id="page-1">
-				<h3><span id="text-27" >Tạm biệt em!</span><br /><span id="text-28" >Sau đó anh mĩm cười quay về!</span></h3>
+				<h3><span id="text-27" >Tạm biệt em!</span><br /><span id="text-28" >Sau đó anh Mỉm cười quay về!</span></h3>
 				<img src='img/iali37.jpg' />
 			</div>
 			<div id="/section-5/page-2" class="ft-page page-26 top-text" data-id="page-2">
