--- a/index.html
+++ b/index.html
@@ -182,10 +182,10 @@
 				<img src='img/iali3.jpg' />
 			</div>
 			<div id="/section-6/page-3" class="ft-page page-34 left-img" data-id="page-3">
-				<h3 id="text-37" >Anh vè em cùng chờ đợi hạnh phúc~ </h3>
+				<h3 id="text-37" >Anh về em cùng chờ đợi hạnh phúc~ </h3>
 			</div>
 			<div id="/section-6/page-4" class="ft-page page-35" data-id="page-4">
-				<h3><span id="text-38" >Anh cảm thấy rất may mắn</span><br /><span id="text-39" >Anh đã có khoảng chứa trong tái tim</span><br /><span id="text-40" >Và em luôn hiện diện ở đó - mãi mãi!</span></h3>
+				<h3><span id="text-38" >Anh cảm thấy rất may mắn</span><br /><span id="text-39" >Anh đã có khoảng chứa trong trái tim</span><br /><span id="text-40" >Và em luôn hiện diện ở đó - mãi mãi!</span></h3>
 				<img src='img/iali8.gif' />
 			</div>
 			<div id="/section-6/page-5" class="ft-page page-36 full-img" data-id="page-5">
